tests/ui/feature-gates/rustc-private.rs
// gate-test-rustc_private

extern crate cfg_if; //~ ERROR  use of unstable library feature `rustc_private`

fn main() {}
